--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,41 +1,49 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab One
+      Busca de infrações
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+<ion-content color='light'>
+  <ion-card color='light' class="welcome-card">
+    <ion-img src="/assets/images/parking.png"></ion-img>
+    <ion-card-header>
+      <ion-card-subtitle><b>Estarcionamento</b></ion-card-subtitle>
+      <ion-card-title>Consulte as infrações pela placa do veículo</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <p>Busque as infrações por placa de veículo, esta é uma ferramente NÃO oficial, apenas para consultas, caso
+        queira verificar o site oficial da Estar Maringá clique <a href='http://venus.maringa.pr.gov.br/estar/' target="_blank">aqui</a>.</p>
+    </ion-card-content>
+  </ion-card>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-label position="floating">Placa do Veículo</ion-label>
+          <ion-input class="uppercase" type="text" maxlength="7" required="true" [(ngModel)]="plate"></ion-input>
+        </ion-item>
+      </ion-col>
+      <!-- <ion-col>
+        <ion-button color="primary" (click)="searchInfrations()">Buscar</ion-button>
+      </ion-col> -->
+    </ion-row>
+  </ion-grid>
+  <ion-list color='light' margin>
+    <ion-list-header>
+      <ion-label><b>Infrações</b></ion-label>
+    </ion-list-header>
+    <ion-item *ngFor="let item of infrations">
+      <!-- <ion-icon slot="start" color="medium" name="paper"></ion-icon> -->
+      <ion-label>{{item.date}} - {{item.place}}</ion-label>
+    </ion-item>
+  </ion-list>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="searchInfrations()">
+      <ion-fab-button>
+        <ion-icon name="search"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  
 </ion-content>
